pybind - Image::Matrix working

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 2.8.12)
 project(gooseeye)
 
+set (CMAKE_CXX_STANDARD 14)
+
 add_subdirectory(pybind11)
 pybind11_add_module(gooseeye image.cpp py_image.cpp)
