--- a/src/python/CMakeLists.txt
+++ b/src/python/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.12)
-project(gooseeye)
+project(GooseEYE)
 
 set (CMAKE_CXX_STANDARD 14)
 
 add_subdirectory(pybind11)
-pybind11_add_module(gooseeye image.cpp ../core/image.cpp)
+pybind11_add_module(GooseEYE image.cpp ../core/image.cpp)
