--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-4.9
-            - libeigen3-dev
+            - python3
       env: COMPILER=gcc GCC=4.9
     - os: linux
       addons:
@@ -20,7 +20,7 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-5
-            - libeigen3-dev
+            - python3
       env: COMPILER=gcc GCC=5
     - os: linux
       addons:
@@ -29,7 +29,7 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-6
-            - libeigen3-dev
+            - python3
       env: COMPILER=gcc GCC=6
 env:
   global:
@@ -37,6 +37,9 @@ env:
     - MINCONDA_LINUX="Linux-x86_64"
     - MINCONDA_OSX="MacOSX-x86_64"
 before_install:
+    - sudo apt-get -qq update
+    - sudo apt-get install -y texlive-base texlive-latex-base texlive-latex-extra texlive-fonts-recommended texlive-fonts-extra
+    - sudo apt-get install dvipng
     - |
       # Configure build variables
       if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
@@ -67,9 +70,18 @@ install:
     - conda install xtl -c conda-forge
     - conda install xsimd -c conda-forge
     - conda install xtensor -c conda-forge
+    - pip install numpy matplotlib GooseMPL
+    - export MPLBACKEND=Agg
+    - python -c "import GooseMPL; GooseMPL.copy_style()"
     # store relevant
+    - root_dir="${PWD}"
     - build_dir="${PWD}/build"
+    # make Python library
+    - cd "${root_dir}"
+    - python3 setup.py build
+    - python3 setup.py install
     # build path
+    - cd "${root_dir}"
     - mkdir "${build_dir}"
     - cd "${build_dir}"
     # install catch
@@ -85,7 +97,30 @@ install:
     - cd "${build_dir}"
     - cmake .. -DBUILD_TESTS=ON
     - make
+    - make install
+    # make examples
+    - g++ -std=c++14 docs/examples/S2.cpp -o docs/examples/S2
+    - g++ -std=c++14 docs/examples/S2_autocorrelation.cpp -o docs/examples/S2_autocorrelation
+    - g++ -std=c++14 docs/examples/S2_ensemble.cpp -o docs/examples/S2_ensemble
+    - g++ -std=c++14 docs/examples/S2_mask.cpp -o docs/examples/S2_mask
+    - g++ -std=c++14 docs/examples/C2.cpp -o docs/examples/C2
+    - g++ -std=c++14 docs/examples/heightheight.cpp -o docs/examples/heightheight
 script:
     # run tests
     - cd "${build_dir}/test"
     - ./test
+    # run examples
+    - python docs/examples/S2.py
+    - python docs/examples/S2_autocorrelation.py
+    - python docs/examples/S2_ensemble.py
+    - python docs/examples/S2_mask.py
+    - python docs/examples/C2.py
+    - python docs/examples/W2.py
+#     - python docs/examples/L.py
+#     - python docs/examples/W2c.py
+    - python docs/examples/clusters.py
+    - python docs/examples/clusters_centers.py
+#     - python docs/examples/clusters_dilate.py
+    - python docs/examples/heightheight.py
+    - python docs/examples/mean.py
+#     - python docs/examples/pixel_path.py
