--- a/.travis.yml
+++ b/.travis.yml
@@ -86,15 +86,13 @@ install:
     - sudo make install
     # make test-cases
     - cd "${build_dir}"
-    - cmake ..
-    - sudo make install
     - cmake .. -DBUILD_TESTS=ON -DBUILD_EXAMPLES=ON
     - make
 script:
     # run tests
     - cd "${build_dir}/test"
     - ./test
-    # run examples
+    # run C++ examples
     - cd "${build_dir}/docs/examples"
     - ./S2
     - ./S2_autocorrelation
@@ -102,7 +100,7 @@ script:
     - ./S2_ensemble
     - ./C2
     - ./heightheight
-    # run examples
+    # run Python examples
     - cd "${root_dir}"
     - python docs/examples/S2.py
     - python docs/examples/S2_autocorrelation.py
@@ -110,11 +108,7 @@ script:
     - python docs/examples/S2_ensemble.py
     - python docs/examples/C2.py
     - python docs/examples/W2.py
-#     - python docs/examples/L.py
-#     - python docs/examples/W2c.py
     - python docs/examples/clusters.py
     - python docs/examples/clusters_centers.py
-#     - python docs/examples/clusters_dilate.py
     - python docs/examples/heightheight.py
     - python docs/examples/mean.py
-#     - python docs/examples/pixel_path.py
