--- a/docs/examples/CMakeLists.txt
+++ b/docs/examples/CMakeLists.txt
@@ -17,13 +17,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -g")
 # set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DXTENSOR_USE_XSIMD=ON")
 
-find_package(xtl REQUIRED)
-find_package(xtensor REQUIRED)
-
-# add current library
-string(CONCAT GooseEYE "${CMAKE_CURRENT_SOURCE_DIR}" "/../../include/")
-include_directories("${GooseEYE}")
-
 # assertions
 if(NOT ASSERT)
   add_definitions(-DNDEBUG)
@@ -31,12 +24,21 @@ else()
   add_definitions(-DXTENSOR_ENABLE_ASSERT=ON)
 endif()
 
+# add current library
+string(CONCAT GooseEYE "${CMAKE_CURRENT_SOURCE_DIR}" "/../../include/")
+include_directories("${GooseEYE}")
+
+# load xtensor-stack libraries
+find_package(xtl REQUIRED)
+find_package(xtensor REQUIRED)
+
 # add custom include paths
 if(NOT "$ENV{INCLUDE_PATH}" STREQUAL "")
   string(REPLACE ":" ";" INCLUDE_LIST "$ENV{INCLUDE_PATH}")
   include_directories(${INCLUDE_LIST})
 endif()
 
+# create executables
 file(GLOB APP_SOURCES *.cpp)
 foreach(testsourcefile ${APP_SOURCES})
     string(REPLACE ".cpp" "" testname ${testsourcefile})
