--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,49 +1,38 @@
 
-cmake_minimum_required(VERSION 2.8.12)
+cmake_minimum_required(VERSION 3.0)
 
-project(test)
+if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
+    project(GooseEYE-test)
+    find_package(GooseEYE REQUIRED CONFIG)
+    set(GOOSEEYE_INCLUDE_DIR ${GooseEYE_INCLUDE_DIRS})
+endif()
 
 option(WARNINGS "Show build warnings" ON)
 
-# basic compiler options
-# ----------------------
-
-# set optimization level
 set(CMAKE_BUILD_TYPE Release)
-
-# set C++ standard
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# switch on warnings
 if(WARNINGS)
-  if(MSVC)
-    if(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
-      string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
+    if(MSVC)
+        if(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
+            string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
+        else()
+            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
+        endif()
     else()
-      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -Wno-unknown-pragmas")
     endif()
-  else()
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -Wno-unknown-pragmas")
-  endif()
 endif()
 
-# load packages
-# -------------
+find_package(Catch2 REQUIRED)
+find_package(xtensor REQUIRED)
+find_package(xtl REQUIRED)
+find_package(xsimd REQUIRED)
 
-# add current library
-string(CONCAT GooseEYE "${CMAKE_CURRENT_SOURCE_DIR}" "/../include/")
-include_directories("${GooseEYE}")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DXTENSOR_USE_XSIMD=ON")
 
-# add custom paths
-if(NOT "$ENV{INCLUDE_PATH}" STREQUAL "")
-  string(REPLACE ":" ";" INCLUDE_LIST "$ENV{INCLUDE_PATH}")
-  include_directories(SYSTEM ${INCLUDE_LIST})
-endif()
-
-# compile
-# -------
-
-add_executable(${PROJECT_NAME}
-  main.cpp
-)
+add_executable(main main.cpp)
+target_link_libraries(main Catch2::Catch2 xtensor xtl xsimd)
+target_include_directories(main PRIVATE ${GOOSEEYE_INCLUDE_DIR})
