--- a/docs/examples/CMakeLists.txt
+++ b/docs/examples/CMakeLists.txt
@@ -29,10 +29,6 @@ endif()
 find_package(Catch2 REQUIRED)
 find_package(xtensor REQUIRED)
 find_package(xtl REQUIRED)
-find_package(xsimd REQUIRED)
-
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DXTENSOR_USE_XSIMD=ON")
 
 if(NOT ASSERT)
     add_definitions(-DNDEBUG)
@@ -45,6 +41,6 @@ foreach(testsourcefile ${APP_SOURCES})
     string(REPLACE ".cpp" "" testname ${testsourcefile})
     get_filename_component(testname ${testname} NAME)
     add_executable(${testname} ${testsourcefile})
-    target_link_libraries(${testname} xtensor xtl xsimd)
+    target_link_libraries(${testname} xtensor xtl)
     target_include_directories(${testname} PRIVATE ${GOOSEEYE_INCLUDE_DIR})
 endforeach()
