--- a/docs/examples/CMakeLists.txt
+++ b/docs/examples/CMakeLists.txt
@@ -14,18 +14,6 @@ set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-if(WARNINGS)
-    if(MSVC)
-        if(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
-            string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
-        else()
-            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
-        endif()
-    else()
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -Wno-unknown-pragmas")
-    endif()
-endif()
-
 find_package(Catch2 REQUIRED)
 find_package(xtensor REQUIRED)
 find_package(xtl REQUIRED)
@@ -41,6 +29,14 @@ foreach(testsourcefile ${APP_SOURCES})
     string(REPLACE ".cpp" "" testname ${testsourcefile})
     get_filename_component(testname ${testname} NAME)
     add_executable(${testname} ${testsourcefile})
-    target_link_libraries(${testname} xtensor xtl)
-    target_include_directories(${testname} PRIVATE ${GOOSEEYE_INCLUDE_DIR})
+    target_link_libraries(${testname} PUBLIC xtensor xtl)
+    target_include_directories(${testname} PRIVATE "${GOOSEEYE_INCLUDE_DIR}")
+    if(WARNINGS)
+        if(MSVC)
+            target_compile_options(${testname} PRIVATE /W4)
+        else()
+            target_compile_options(${testname} PRIVATE -Wall -Wextra -pedantic -Wno-unknown-pragmas)
+        endif()
+    endif()
 endforeach()
+
