--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,22 +13,17 @@ set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-if(WARNINGS)
-    if(MSVC)
-        if(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
-            string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
-        else()
-            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
-        endif()
-    else()
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -Wno-unknown-pragmas")
-    endif()
-endif()
-
 find_package(Catch2 REQUIRED)
 find_package(xtensor REQUIRED)
 find_package(xtl REQUIRED)
 
 add_executable(main main.cpp)
-target_link_libraries(main Catch2::Catch2 xtensor xtl)
-target_include_directories(main PRIVATE ${GOOSEEYE_INCLUDE_DIR})
+target_link_libraries(main PUBLIC Catch2::Catch2 xtensor xtl)
+target_include_directories(main PRIVATE "${GOOSEEYE_INCLUDE_DIR}")
+if(WARNINGS)
+    if(MSVC)
+        target_compile_options(main PRIVATE /W4)
+    else()
+        target_compile_options(main PRIVATE -Wall -Wextra -pedantic -Wno-unknown-pragmas)
+    endif()
+endif()
