--- a/docs/examples/CMakeLists.txt
+++ b/docs/examples/CMakeLists.txt
@@ -13,10 +13,16 @@ option(ASSERT "Enable assertions" ON)
 set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DXTENSOR_USE_XSIMD=ON")
+
+if(NOT MSVC)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
+endif()
 
 find_package(Catch2 REQUIRED)
 find_package(xtensor REQUIRED)
 find_package(xtl REQUIRED)
+find_package(xsimd REQUIRED)
 
 if(NOT ASSERT)
     add_definitions(-DNDEBUG)
@@ -29,7 +35,7 @@ foreach(testsourcefile ${APP_SOURCES})
     string(REPLACE ".cpp" "" testname ${testsourcefile})
     get_filename_component(testname ${testname} NAME)
     add_executable(${testname} ${testsourcefile})
-    target_link_libraries(${testname} PUBLIC xtensor xtl)
+    target_link_libraries(${testname} PUBLIC xtensor xtl xsimd)
     target_include_directories(${testname} PRIVATE "${GOOSEEYE_INCLUDE_DIR}")
     if(WARNINGS)
         if(MSVC)
