--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,13 +12,19 @@ option(WARNINGS "Show build warnings" ON)
 set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DXTENSOR_USE_XSIMD=ON")
+
+if(NOT MSVC)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
+endif()
 
 find_package(Catch2 REQUIRED)
 find_package(xtensor REQUIRED)
 find_package(xtl REQUIRED)
+find_package(xsimd REQUIRED)
 
 add_executable(main main.cpp)
-target_link_libraries(main PUBLIC Catch2::Catch2 xtensor xtl)
+target_link_libraries(main PUBLIC Catch2::Catch2 xtensor xtl xsimd)
 target_include_directories(main PRIVATE "${GOOSEEYE_INCLUDE_DIR}")
 if(WARNINGS)
     if(MSVC)
