--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,7 +125,7 @@ if(BUILD_TESTS)
     add_subdirectory(test)
 endif()
 
-if(BUILD_TESTS)
+if(BUILD_EXAMPLES)
     add_subdirectory(docs/examples)
 endif()
 
