--- a/docs/examples/CMakeLists.txt
+++ b/docs/examples/CMakeLists.txt
@@ -24,18 +24,12 @@ foreach(testsourcefile ${APP_SOURCES})
         xtensor::optimize
         xtensor::use_xsimd)
 
-    if(WARNINGS)
-        if(MSVC)
-            target_compile_options(${testname} PRIVATE /W4)
-        else()
-            target_compile_options(${testname} PRIVATE -Wall -Wextra -pedantic -Wno-unknown-pragmas)
-        endif()
+    if (WARNINGS)
+        target_link_libraries(${testname} PRIVATE GooseEYE::compiler_warnings)
     endif()
 
-    if(NOT ASSERT)
-        target_compile_definitions(${testname} PRIVATE NDEBUG)
-    else()
-        target_compile_definitions(${testname} PRIVATE XTENSOR_ENABLE_ASSERT GOOSEEYE_ENABLE_ASSERT)
+    if (ASSERT)
+        target_link_libraries(${testname} PRIVATE GooseEYE::debug)
     endif()
 
 endforeach()
