--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -65,6 +65,7 @@ build_script:
   - python docs\examples\C2.py --no-plot
   - python docs\examples\L.py --no-plot
   - python docs\examples\W2.py --no-plot
+  - python docs\examples\W2c.py --no-plot
   - python docs\examples\clusters.py --no-plot
   - python docs\examples\clusters_centers.py --no-plot
   - python docs\examples\heightheight.py --no-plot
