--- a/.travis.yml
+++ b/.travis.yml
@@ -107,6 +107,7 @@ script:
     - python docs/examples/C2.py --no-plot
     - python docs/examples/L.py --no-plot
     - python docs/examples/W2.py --no-plot
+    - python docs/examples/W2c.py --no-plot
     - python docs/examples/clusters.py --no-plot
     - python docs/examples/clusters_centers.py --no-plot
     - python docs/examples/heightheight.py --no-plot
