--- a/.travis.yml
+++ b/.travis.yml
@@ -75,13 +75,13 @@ install:
     - hash -r
     - conda config --set always_yes yes --set changeps1 no
     - conda update -q conda
-    - conda install cmake -c conda-forge
-    - conda install xsimd -c conda-forge
-    - conda install xtensor -c conda-forge
-    - conda install python -c conda-forge
-    - conda install numpy -c conda-forge
-    - conda install pyxtensor -c conda-forge
-    - conda install catch2 -c conda-forge
+    - conda install -c conda-forge cmake
+    - conda install -c conda-forge xsimd
+    - conda install -c conda-forge xtensor
+    - conda install -c conda-forge python
+    - conda install -c conda-forge numpy
+    - conda install -c conda-forge pyxtensor
+    - conda install -c conda-forge catch2
     # Build/install the library
     - cmake . -DBUILD_TESTS=ON -DBUILD_EXAMPLES=ON
     - make
